# 2D-Platformer

./: .gitignore  CMakeLists.txt  Main.cpp
assets/levels/level_001/: decoration.txt  interactive.txt  map.txt
include/: Camera.h  Constants.h  Entity.h  Game.h  Layer.h  Level.h  MapTextures.h  Physics.h  Player.h  TextureManager.h  TexturesNotation.h  Utils.h
src/: Camera.cpp  Entity.cpp  Game.cpp  Layer.cpp  Level.cpp  MapTextures.cpp  Player.cpp  TextureManager.cpp
